adding oAuth facebook

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ MYSQL_DB = 'car_listing'
 MYSQL_PORT = 3306
 
 API_PORT = 6969
+HOST = 'localhost'
+
+APP_ID= 'XXXXXXXXXXXXX'
+APP_SECRET= 'XXXXXXXXXXXXX'
 
 SECRET_TOKEN='S3CR3T_K3Y'
 
